[CODE] Add comments